# LimitlessFlashBot

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  PRODUCTION_SETUP.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci-cd.yml
contracts/: hardhat.config.js  package.json
contracts/contracts/: LimitlessFlashBot.sol
contracts/scripts/: deploy.js
contracts/test/: LimitlessFlashBot.test.js
docs/: API.md  DEPLOYMENT.md
executor/: index.js  package.json
executor/abi/: LimitlessFlashBot.json
executor/src/: arbitrage-calculator.js  database-manager.js  flashbots-executor.js  price-monitor.js  quantum-signal-processor.js  risk-manager.js
off-chain/: app.py  demo_app.py  requirements.txt
off-chain/src/: __init__.py
off-chain/src/core/: config.py  demo_config.py
off-chain/src/dex/: dex_monitor.py
off-chain/src/ml/: prediction_model.py
off-chain/src/orchestrator/: flash_orchestrator.py  transaction_manager.py
programs/flash-loan-system/: Cargo.toml
programs/flash-loan-system/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/flash-loan-system/src/instructions/: emergency_withdraw.rs  flash_arbitrage.rs  flash_self_liquidate.rs  initialize.rs  mod.rs  repay_flash_loan.rs
scripts/: build.sh  deploy-vps.sh  deploy.sh  smoke-test.js  test.sh
solana-release/: .crates.toml  version.yml
tests/: flash_loan_system.rs  integration.ts
web/limitless-flash-dashboard/: index.html  package.json
(+3 files in other folders)
