[package]
name = "flash-loan-system"
version = "0.1.0"
description = "Production-grade Solana flash-loan system with arbitrage and self-liquidation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.10.1"
switchboard-v2 = "0.4.0"
mpl-token-metadata = "3.2.0"
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }

